--- a/public/css/video.desktop.css
+++ b/public/css/video.desktop.css
@@ -63,7 +63,7 @@
   background-image: url(../assets/KP_NBA_desktop.jpg);
 }
 .translationllc__video__container--work-video--two {
-  background-image: url(../assets/NFL_desktop.jpg);
+  background-image: url(../assets/HAA90sec1366x768.jpg);
 }
 .translationllc__video__container--work-video--three {
   background-image: url(../assets/VCF_desktop.jpg);
