--- a/public/css/video.mobile.css
+++ b/public/css/video.mobile.css
@@ -30,7 +30,7 @@
   background-image: url(../assets/KP_NBA_mobile.jpg);
 }
 .translationllc__video__container--work-video--two {
-  background-image: url(../assets/NFL_mobile.jpg);
+  background-image: url(../assets/HAA90sec945x768.jpg);
 }
 .translationllc__video__container--work-video--three {
   background-image: url(../assets/VCF_mobile.jpg);
