--- a/public/css/sermad_desktop.css
+++ b/public/css/sermad_desktop.css
@@ -227,6 +227,34 @@ h1 {
 	font-size:0.6em;
 }
 
+.privacy_policy {
+	font-size:0.6em;
+}
+
+#privacy_policy {
+	padding:20px;
+	color:#ffffff;
+	font-size:0.9em;
+}
+
+#privacy_policy h1 {
+	margin:0 0 10px 0;
+}
+
+#privacy_policy h2 {
+	margin:0 0 10px 0;
+}
+
+
+#privacy_policy h3 {
+	margin:0 0 10px 0;
+}
+
+#privacy_policy p {
+	margin:0 0 20px 0;
+}
+
+
 .translationllc__main__articles {
 	padding:0;
 }
