--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -384,6 +384,7 @@
       </div>
     </div>
     <p class="translationllc__contact-us__copyright">Ⓒ2017 Translation. All Rights Reserved.</p>
+    <p class="privacy_policy"><a href="privacy_policy.html" target="_blank">Privacy Policy</a></p>
   </section>
   <button style="display: none" id="requestFullscreenButton" type="button" name="button"></button>
 </main>
