--- a/public/css/unitedMastersSection.desktop.css
+++ b/public/css/unitedMastersSection.desktop.css
@@ -11,3 +11,10 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+
+.translationllc__main__united-masters__gif {
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
