--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -342,7 +342,40 @@
     </div>
   </section>
   
+    <section class="translationllc__main__united-masters" id="unitedMasters">
+    <img class="translationllc__main__united-masters__gif" src="../assets/unitedMasters.gif" alt="united masters mtv gif">
+    <div class="translationllc__main__united-masters__next-chapter">
+      <h2 class="translationllc__main__united-masters__next-chapter__header">OUR NEXT CHAPTER</h2>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        From the beginning, Translation was a different kind of team: a diverse mix of music industry veterans,
+        strategic experts, multidisciplinary creatives, and innovative business leaders.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        Knowing that cultural relevance demands constant re-invention, we have gone through countless transformations
+        as we have seen our company grow from a few people gathered in a single conference room to a vibrant team
+        of 150 across two coasts.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        And now, in partnership with Alphabet Inc., Andreessen Horowitz, 21st Century Fox and Floodgate, we are embarking
+        upon our greatest transformation to date.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        We are thrilled to introduce UnitedMasters: Translation's new partner company.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        UnitedMasters is an entirely new kind of music company, built to unite the power of data and the pursuit
+        of creative freedom to invent new ways to help artists maximize their creative and economic potential.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+        This is the biggest chapter yet of the WIP story we began in 2004, and we couldn't be more excited about what the
+        future will hold.
+      </p>
 
+    </div>
+    <div class="translationllc__main__united-masters__logo">
+    </div>
+
+  </section>
   
   <section class="translationllc__contact-us" id="contactUs">
     <h2 class="translationllc__contact-us__header">STAY IN TOUCH</h2>
