--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,6 +6,6 @@
     <a href="#work">Work</a>
     <a href="#news">News</a>
     <a href="#culture">Culture</a>
-    <!-- <a class="translationllc__nav__united-masters" href="#unitedMastersSection">United Masters</a> -->
+    <a class="translationllc__nav__united-masters" href="#unitedMasters">United Masters</a>
   </nav>
 </header>
