--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -342,19 +342,66 @@
     </div>
   </section>
   
+  <section class="translationllc__main__united-masters" id="unitedMasters">
+    <img class="translationllc__main__united-masters__gif" src="../assets/unitedMasters.gif" alt="united masters mtv gif">
+    <div class="translationllc__main__united-masters__next-chapter">
+      <h2 class="translationllc__main__united-masters__next-chapter__header">Introducing: UnitedMasters</h2>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+From the beginning, Translation was a different kind of team: 
+a diverse mix of music industry veterans, strategic experts, 
+multidisciplinary creatives, and innovative business leaders.
+
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+Knowing that cultural relevance demands constant re-invention, 
+we have gone through countless transformations as we have seen 
+our company grow from a few people gathered in a single conference 
+room to a vibrant team of 200 across two coasts.
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+And now, in partnership with Alphabet Inc., Andreessen Horowitz, 
+21st Century Fox and Floodgate, we are embarking upon 
+our greatest transformation to date.
+
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+We are thrilled to introduce UnitedMasters: 
+Translation's new partner company.
+
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+UnitedMasters redefines what it means to be an artist 
+services company. By uniting culture, technology and storytelling UnitedMasters aims to empower all artists to amplify their independence.
+We believe the combination of Translation and UnitedMasters will re-invent how cultural influence can create value for brands and artists.
+
+      </p>
+      <p class="translationllc__main__united-masters__next-chapter__content">
+This is the biggest chapter yet of the story we began in 2004, 
+and we couldn't be more excited about what the future will hold.
+
+      </p>
+      <p><a href="http://www.unitedmasters.com/">TAKE ME TO UNITEDMASTERS</a></p>
+
+    </div>
+    <div class="translationllc__main__united-masters__logo">
+    </div>
+    <hr>
+
+  </section>
+  
   <section class="translationllc__contact-us" id="contactUs">
-    <h2 class="translationllc__contact-us__header">STAY IN TOUCH</h2>
+    <h2 class="translationllc__contact-us__header">CONTACT TRANSLATION</h2>
     <div class="translationllc__contact-us__two-column-container">
       <div class="translationllc__contact-us__two-column-container__column">
         <div class="translationllc__contact-us__container">
-          <h4>NYC</h4>
+          <h4>TRANSLATION NYC</h4>
           <p>145 West 45th Street</p>
           <p>12th Floor</p>
           <p>New York, NY 10036</p>
         </div>
 
         <div class="translationllc__contact-us__container">
-          <h4>SF</h4>
+          <h4>TRANSLATION SF</h4>
           <p>2360 3rd Street</p>
           <p>San Francisco, CA 94107</p>
         </div>
