Changed UM copy.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -370,8 +370,7 @@ Translation's new partner company.
 
       </p>
       <p class="translationllc__main__united-masters__next-chapter__content">
-UnitedMasters redefines what it means to be an artist 
-services company. By uniting culture, technology and storytelling UnitedMasters aims to empower all artists to amplify their independence.
+UnitedMasters redefines what it means to be an artist services company. By uniting culture, technology and storytelling UnitedMasters aims to empower all artists to own their future.
 We believe the combination of Translation and UnitedMasters will re-invent how cultural influence can create value for brands and artists.
 
       </p>
