Added State Farm - Chris + Cliff

--- a/public/css/video.desktop.css
+++ b/public/css/video.desktop.css
@@ -60,7 +60,7 @@
   background-image: url(../assets/sizzle_desktop.jpg);
 }
 .translationllc__video__container--work-video--one {
-  background-image: url(../assets/KP_NBA_desktop.jpg);
+  background-image: url(../assets/SF_Chris_1366_768.jpg);
 }
 .translationllc__video__container--work-video--two {
   background-image: url(../assets/HAA90sec1366x768.jpg);
