--- a/public/css/video.mobile.css
+++ b/public/css/video.mobile.css
@@ -27,7 +27,7 @@
   background-image: url(../assets/sizzle_mobile.jpg);
 }
 .translationllc__video__container--work-video--one {
-  background-image: url(../assets/KP_NBA_mobile.jpg);
+  background-image: url(../assets/SF_Chris_945_768.jpg);
 }
 .translationllc__video__container--work-video--two {
   background-image: url(../assets/HAA90sec945x768.jpg);
