UM support copy.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -359,11 +359,7 @@ our company grow from a few people gathered in a single conference
 room to a vibrant team of 200 across two coasts.
       </p>
       <p class="translationllc__main__united-masters__next-chapter__content">
-And now, in partnership with Alphabet Inc., Andreessen Horowitz, 
-21st Century Fox and Floodgate, we are embarking upon 
-our greatest transformation to date.
-
-      </p>
+And now, with the support of our investors Alphabet Inc., Andreessen Horowitz, 21st Century Fox and Floodgate, we are embarking upon our greatest transformation to date.</p>
       <p class="translationllc__main__united-masters__next-chapter__content">
 We are thrilled to introduce UnitedMasters: 
 Translation's new partner company.
