Changed UM WWW.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -375,7 +375,7 @@ This is the biggest chapter yet of the story we began in 2004,
 and we couldn't be more excited about what the future will hold.
 
       </p>
-      <p><a href="http://www.unitedmasters.com/">TAKE ME TO UNITEDMASTERS</a></p>
+      <p><a href="http://unitedmasters.com/">TAKE ME TO UNITEDMASTERS</a></p>
 
     </div>
     <div class="translationllc__main__united-masters__logo">
